--- a/.github/workflows/upstream-dev-ci.yaml
+++ b/.github/workflows/upstream-dev-ci.yaml
@@ -73,6 +73,8 @@ jobs:
     name: upstream-dev
     runs-on: ubuntu-latest
     needs: cache-pixi-lock
+    if: |
+      always() && needs.cache-pixi-lock.result == 'success'
     defaults:
       run:
         shell: bash -l {0}
